--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "react-slider": "^2.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.2",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^5.1.1",
     "typescript": "5.0.2",
     "uuid": "^9.0.0"
