--- a/app/package.json
+++ b/app/package.json
@@ -24,16 +24,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.6",
     "react-mathjax": "^1.0.1",
     "react-secure-storage": "^1.3.2",
     "react-slider": "^2.0.4",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-katex": "^6.0.2",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^5.1.1",
     "typescript": "5.0.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "react-markdown": "9.0.1",
+    "rehype-katex": "7.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "6.0.0"    
+
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
